# gvt_scripts

./: .header-template  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  tox.ini
gvt_scripts/: __init__.py  _base.py  scanshpdir.py  serializers.py  shp_metadata.py  utils.py
gvt_scripts/scanshpdir/: cli.py  core.py  models.py
gvt_scripts/search_shp_dir/: __init__.py  cli.py  core.py  models.py
old/: shp_metadata.py
tests/: test_shp_metadata.py
